--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,21 @@
 body {
   font-family: 'Roboto', sans-serif;
-  color: white;  
+  color: white;
   margin-top: -23.8px;
 }
 
 #navbar {
   position: fixed;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
+  height: auto;
   z-index: 1;
-  transition: all 1.2s;
+  transition: all 0.6s;
 }
 
 .navbar-brand {
   font-family: 'Poppins', sans-serif;
-  font-size: 24px; 
+  font-size: 24px;
 }
 
 .navbar-text {
@@ -59,13 +60,14 @@ body {
   text-align: center;
 }
 
-a, a:hover {
+a,
+a:hover {
   text-decoration: none;
 }
 
 .button-main {
   padding: 15px 50px;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   border: 2px solid whitesmoke;
   border-radius: 100px;
   color: whitesmoke;
@@ -101,19 +103,19 @@ a, a:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;  
+  z-index: 0;
 }
 
 .technologies-title {
   font-family: 'Poppins', sans-serif;
-  color: rgb(60,60,60);
+  color: rgb(60, 60, 60);
   font-weight: 600;
   text-align: center;
 }
 
 .technologies-desc {
   margin-bottom: 5vh;
-  color: rgb(40,40,40);
+  color: rgb(40, 40, 40);
   font-family: 'Poppins', sans-serif;
   font-size: 1.3em;
   text-align: center;
@@ -137,20 +139,179 @@ a, a:hover {
 
 .technology-title {
   font-family: 'Poppins', sans-serif;
-  color: rgb(60,60,60);
+  color: rgb(60, 60, 60);
   font-size: 20px;
 }
 
-.technology-desc {
-  
-}
+.technology-desc {}
 
 .star-active {
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   color: gold;
 }
 
 .star-notactive {
-  text-shadow: 1px 0px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 0px 3px rgba(0, 0, 0, 0.2);
   color: dimgrey;
+}
+
+#projects {
+  background-color: rgb(30,30,30);
+  position: relative;
+  height: auto;
+  color: black;
+  padding-top: 8vh;
+  padding-bottom: 8vh;
+  background-image: url(../img/projects-bg.jpg);
+}
+
+#projects:before {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.projects-title {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(240, 240, 240);
+  font-weight: 600;
+  text-align: center;
+}
+
+.projects-desc {
+  margin-bottom: 5vh;
+  color: rgb(250, 250, 250);
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.3em;
+  text-align: center;
+}
+
+.project-card {
+  background: rgb(20,20,20);
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.55);
+  padding: 8px 40px;
+  padding-top: 18px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.project-date {
+  color: rgba(255,255,255,0.2);
+  font-size: 14px;
+  transition: all 0.3 ease-in;
+}
+
+.project-date:hover {
+  color: rgba(255,255,255,0.4);
+  cursor: default;
+}
+
+.project-title {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(240, 240, 240);
+  font-weight: 400;
+  padding-top: 6px;
+}
+
+.project-desc {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(230, 230, 230);
+  font-weight: 300;
+}
+
+.project-hr {
+  border: none;
+  outline: none;
+  height: 2px;
+  background-color: rgba(255,255,255,0.05);
+}
+
+.project-img {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-position: top;
+  background-size: cover;
+  transition: background-position 8s ease-in-out;
+}
+
+.project-img:before {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(0,0,0,0.2);
+  width: 100%;
+  height: 100%;
+  transition: all 0.2s;
+}
+
+.project-img:hover:before {
+  background-color: transparent;
+}
+
+.project-img:hover {
+  background-position: bottom;
+}
+
+.project-elektromedia {
+  background-image: url(../img/elektromedia-fullwebiste-ss.png);
+}
+
+.project-undone {
+  background-image: url(../img/work-in-progress.png);
+}
+
+.project-technologies-title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: rgba(255,255,255,0.3);
+  font-variant: small-caps;
+  font-weight: 600;
+  margin-top: -16px;
+}
+
+.project-technologies {
+  display: flex;
+}
+
+.project-technology-img {
+  width: 25px;
+  height: auto;
+  filter: grayscale(100);
+  margin: 5px 5px;
+  transition: all 0.3s;
+}
+
+.project-technology-img:first-of-type {
+  margin-left: 0;
+}
+
+.project-technology-img:hover {
+  filter: none;
+}
+
+.project-button-deck {
+  width: 100%;
+  height: auto;
+  margin-top: 15px;
+  padding-bottom: 15px;
+}
+
+.project-button {
+  outline: none;
+  border: 2px solid rgba(255,255,255,0.6);
+  width: 49%;
+  padding: 8px 0;
+  background-color: transparent;
+  color: rgba(255,255,255,0.6);
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease-in;
+}
+
+.project-button:hover {
+  border: 2px solid rgba(255,255,255,1);
+  color: rgba(255,255,255,1);
 }
