normal commit (dodana sekcja kontakt + responsywność poszczególnych elementów)

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,14 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: white;
+}
+
+*, button:focus {
+  outline: none;
 }
 
 #navbar {
@@ -15,6 +23,16 @@ body {
 .navbar-brand {
   font-family: 'Poppins', sans-serif;
   font-size: 24px;
+}
+
+.nav-link {
+  font-family: 'Poppins', sans-serif;
+  color: rgba(255, 255, 255, 0.7) !important;
+  transition: all 0.2s ease;
+}
+
+.nav-link:hover {
+  color: white !important;
 }
 
 .navbar-text {
@@ -42,7 +60,7 @@ body {
 }
 
 .main-wrapper {
-  padding-top: 35vh;
+  padding-top: 0vh;
   height: 65vh;
 }
 
@@ -65,14 +83,16 @@ a:hover {
 }
 
 .button-main {
-  padding: 15px 50px;
+  padding: 15px 0;
   background-color: rgba(0, 0, 0, 0);
   border: 2px solid whitesmoke;
   border-radius: 100px;
+  width: 40%;
   color: whitesmoke;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   transition: all 0.4s ease-in;
+  text-align: center;
 }
 
 .button-main:hover {
@@ -155,22 +175,27 @@ a:hover {
 }
 
 #projects {
-  background-color: rgb(30,30,30);
+  background-color: rgb(30, 30, 30);
   position: relative;
   height: auto;
-  color: black;
+  color: whitesmoke;
   padding-top: 8vh;
   padding-bottom: 8vh;
   background-image: url(../img/projects-bg.jpg);
+  background-attachment: fixed;
+  background-position: center;
 }
 
 #projects:before {
   content: '';
   position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .projects-title {
@@ -189,8 +214,8 @@ a:hover {
 }
 
 .project-card {
-  background: rgb(20,20,20);
-  box-shadow: 0px 4px 8px rgba(0,0,0,0.55);
+  background: rgb(20, 20, 20);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.55);
   padding: 8px 40px;
   padding-top: 18px;
   border-radius: 4px;
@@ -198,13 +223,13 @@ a:hover {
 }
 
 .project-date {
-  color: rgba(255,255,255,0.2);
+  color: rgba(255, 255, 255, 0.2);
   font-size: 14px;
   transition: all 0.3 ease-in;
 }
 
 .project-date:hover {
-  color: rgba(255,255,255,0.4);
+  color: rgba(255, 255, 255, 0.4);
   cursor: default;
 }
 
@@ -225,7 +250,7 @@ a:hover {
   border: none;
   outline: none;
   height: 2px;
-  background-color: rgba(255,255,255,0.05);
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .project-img {
@@ -240,8 +265,11 @@ a:hover {
 .project-img:before {
   content: '';
   position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0,0,0,0.2);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
   transition: all 0.2s;
@@ -266,7 +294,7 @@ a:hover {
 .project-technologies-title {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: rgba(255,255,255,0.3);
+  color: rgba(255, 255, 255, 0.3);
   font-variant: small-caps;
   font-weight: 600;
   margin-top: -16px;
@@ -301,16 +329,199 @@ a:hover {
 
 .project-button {
   outline: none;
-  border: 2px solid rgba(255,255,255,0.6);
+  border: 2px solid rgba(255, 255, 255, 0.6);
   width: 49%;
   padding: 8px 0;
   background-color: transparent;
-  color: rgba(255,255,255,0.6);
+  color: rgba(255, 255, 255, 0.6);
   font-family: 'Poppins', sans-serif;
   transition: all 0.3s ease-in;
 }
 
 .project-button:hover {
-  border: 2px solid rgba(255,255,255,1);
-  color: rgba(255,255,255,1);
+  border: 2px solid rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+#contact {
+  background-color: rgb(25, 25, 25);
+  position: relative;
+  height: auto;
+  color: black;
+  padding-top: 6vh;
+  padding-bottom: 6vh;
+  height: auto;
+}
+
+.application-status {
+  background-color: transparent;
+  width: 100%;
+  padding: 12px 0;
+  text-align: center;
+  color: whitesmoke;
+  border-radius: 100px;
+  font-size: 18px;
+}
+
+.on {
+  border: 2px solid #b8e994;
+  color: #b8e994;
+  box-shadow: 0 0 0 0 rgba(90, 153, 212, 0.5);
+  -webkit-animation: pulse 1.5s infinite;
+}
+
+.off {
+  border: 2px solid #b71540;
+  color: #b71540;
+}
+
+@keyframes pulse {
+  0% {}
+
+  70% {
+    box-shadow: 0 0 0 15px rgba(90, 153, 212, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(90, 153, 212, 0);
+  }
+}
+
+.contact-icons a {
+  font-size: 40px;
+  color: whitesmoke;
+}
+
+.contact-email-button {
+  background-color: transparent;
+  width: 100%;
+  padding: 12px 0;
+  border: 2px solid whitesmoke;
+  color: whitesmoke;
+  border-radius: 100px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  transition: all 0.3s ease-in;
+}
+
+.contact-email-button:hover {
+  background-color: whitesmoke;
+  color: #202020;
+}
+
+/*Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) {
+
+  .brand-name {
+    font-size: 2.6em;
+  }
+
+  .main-title {
+    font-size: 1.6em;
+  }
+
+  .technologies-title {
+    font-size: 1.5em;
+  }
+
+  .technologies-desc {
+    font-size: 1.2em;
+  }
+
+  .projects-desc {
+    font-size: 1em;
+  }
+
+  .project-title {
+    font-size: 1.2em;
+  }
+
+  .project-desc {
+    font-size: 0.8em;
+  }
+
+  .project-img {
+    height: 200px;
+  }
+
+  .project-button {
+    font-size: 0.8em;
+  }
+
+  .technology-info {
+    padding: 20px;
+  }
+
+  .technology-img {
+    width: 50px;
+  }
+
+  .technology-title {
+    font-size: 16px;
+  }
+
+  .button-main {
+    padding: 10px 15px;
+    width: 80%;
+  }
+
+  .application-status,
+  .contact-email-button,
+  .contact-icons {
+    margin-bottom: 35px;
+    width: 75%;
+  }
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+  .brand-name {
+    font-size: 3.5em;
+  }
+
+  .application-status,
+  .contact-icons {
+    margin-bottom: 35px;
+    width: 75%;
+  }
+
+  .contact-email-button {
+    width: 75%;
+  }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+  .project-technologies-title {
+    font-size: 20px;
+  }
+
+  .project-technology-img {
+    width: 33px;
+  }
+
+  .project-date {
+    color: rgba(255, 255, 255, 0.4)
+  }
+
+  .application-status,
+  .contact-icons {
+    margin-bottom: 35px;
+    width: 75%;
+  }
+
+  .contact-email-button {
+    width: 75%;
+  }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+  ...
 }
