--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,11 @@ a:hover {
   background-image: url(../img/work-in-progress.png);
 }
 
+.project-todolist {
+  background-position: center;
+  background-image: url(../img/todolist.gif);
+}
+
 .project-technologies-title {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
